--- a/templates/homepage.html.twig
+++ b/templates/homepage.html.twig
@@ -17,7 +17,9 @@
         {% if app.user %}
             <div>Hello {{ app.user.username }}</div>
             <a href="{{ url('app_logout') }}">Logout</a>
-        {% else %}<a href="{{ url('app_login') }}">Login</a>
+        {% else %}
+            <a href="{{ url('app_login') }}">Login</a>
+            <a href="{{ url('app_register') }}">Register</a>
         {% endif %}
 
         {% block body %}
