--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,9 @@
         {% endblock %}
     </head>
     <body>
+    {% block menu %}
+        {% include 'menu/header.html.twig' %}
+    {% endblock %}
         {% block body %}{% endblock %}
     </body>
 </html>
