--- a/templates/homepage.html.twig
+++ b/templates/homepage.html.twig
@@ -1,33 +1,17 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
+{% extends 'base.html.twig' %}
 
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
-    </head>
-    <body>
-        {% include 'menu/header.html.twig' %}
+{% block title %}Question index{% endblock %}
 
-        {% block body %}
-            <br>
-            <br>
-            <div>Homepage</div>
-            <div>
-                <h3>List of questions</h3>
-                {% for question in questions %}
-                    {% include 'question/_in_list.html.twig' %}
-                {% else %}
-                    <div>No questions found</div>
-                {% endfor %}
-            </div>
-        {% endblock %}
-    </body>
-</html>
+{% block body %}
+    <br>
+    <br>
+    <div>Homepage</div>
+    <div>
+        <h3>List of questions</h3>
+        {% for question in questions %}
+            {% include 'question/_in_list.html.twig' %}
+        {% else %}
+            <div>No questions found</div>
+        {% endfor %}
+    </div>
+{% endblock %}
