--- a/templates/answer/new.html.twig
+++ b/templates/answer/new.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <h1>Create new Answer</h1>
-
+    <div><h4>{{ question.content }}</h4></div>
     {{ include('answer/_form.html.twig') }}
 
     <a href="{{ path('app_answer_index') }}">back to list</a>
