--- a/templates/question/_in_list.html.twig
+++ b/templates/question/_in_list.html.twig
@@ -12,7 +12,13 @@
             {% if app.user and app.user.canAnswerQuestion(question) %}
             <a href="{{ url('app_answer_new', {'id': question.id}) }}"><button>Answer</button></a>
             {% endif %}
+
+            {% set answer = app.user.hasAnswerTo(question) %}
+            {% if app.user and answer %}
+            <a href="{{ url('app_answer_edit', {'id': answer.id}) }}"><button>Update your answer</button></a>
+            {% endif %}
         </td>
+        <hr/>
     </tr>
     </tbody>
 </table>
