--- a/templates/question/_in_list.html.twig
+++ b/templates/question/_in_list.html.twig
@@ -10,13 +10,14 @@
         <td><a href="{{ url('app_question_show', {'id': question.id}) }}">{{ question.content }}</a></td>
         <td>
             {% if app.user and app.user.canAnswerQuestion(question) %}
-            <a href="{{ url('app_answer_new', {'id': question.id}) }}"><button>Answer</button></a>
+                <a href="{{ url('app_answer_new', {'id': question.id}) }}"><button>Answer</button></a>
             {% endif %}
-
             {% set answer = app.user.hasAnswerTo(question) %}
             {% if app.user and answer %}
-            <a href="{{ url('app_answer_edit', {'id': answer.id}) }}"><button>Update your answer</button></a>
+                <a href="{{ url('app_answer_edit', {'id': answer.id}) }}"><button>Update your answer</button></a>
             {% endif %}
+
+            ({{ question.answers.count }} answers)
         </td>
         <hr/>
     </tr>
