--- a/templates/menu/header.html.twig
+++ b/templates/menu/header.html.twig
@@ -1,12 +1,14 @@
+<a href="{{ url('homepage') }}"><button>Homepage</button></a>
+
 {% if app.user %}
     <div>Hello {{ app.user.username }}</div>
 
-    <a href="{{ url('homepage') }}"><button>Homepage</button></a>
+
     <a href="{{ url('app_question_index') }}"><button>My questions</button></a>
     <a href="{{ url('app_answer_index') }}"><button>My answers</button></a>
 
     <a href="{{ url('app_logout') }}"><button>Logout</button></a>
 {% else %}
-    <a href="{{ url('app_login') }}">Login</a>
-    <a href="{{ url('app_register') }}">Register</a>
+    <a href="{{ url('app_login') }}"><button>Login</button></a>
+    <a href="{{ url('app_register') }}"><button>Register</button></a>
 {% endif %}
