Properly count answer's rating

--- a/templates/question/show.html.twig
+++ b/templates/question/show.html.twig
@@ -32,7 +32,7 @@
                     {% endif %}
                 </td>
                 <td>
-                    Rated: {{ answer.ratingTotal }}
+                    Rated: {{ answer.totalRatingsCount }}
                 </td>
             </tr>
         {% else %}
