--- a/templates/user/_form.html.twig
+++ b/templates/user/_form.html.twig
@@ -1,4 +1,7 @@
 {{ form_start(form) }}
+    {% if user.avatarFileName %}
+        <img src="{{ path }}{{ user.avatarFileName }}" style="width: 100px; height: 100px;" />
+    {% endif %}
     {{ form_widget(form) }}
     <button class="btn">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
