Extract primitive CSS file for avatars and images to get rid from inline styles

--- a/templates/user/_form.html.twig
+++ b/templates/user/_form.html.twig
@@ -1,6 +1,6 @@
 {{ form_start(form) }}
     {% if user.avatarFileName %}
-        <img src="{{ path }}/{{ user.avatarFileName }}" style="width: 100px; height: 100px;" />
+        <img src="{{ path }}/{{ user.avatarFileName }}" />
     {% endif %}
     {{ form_widget(form) }}
     <button class="btn">{{ button_label|default('Save') }}</button>
